// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete Autocomplete should render autocomplete component 1`] = `
<div>
  <div
    class="ac"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      style="position: absolute; left: -9999px; height: 1px; width: 1px; overflow: hidden;"
    />
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      autocomplete="off"
      class="autocomplete__input autocomplete__input--default"
      data-headlessui-state=""
      data-hj-allow=""
      id="autocomplete"
      maxlength="512"
      name="q"
      role="combobox"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Autocomplete Non-autocomplete should render fallback search box when no source 1`] = `
<div>
  <div
    class="ac"
  >
    <div
      aria-atomic="true"
      aria-live="polite"
      style="position: absolute; left: -9999px; height: 1px; width: 1px; overflow: hidden;"
    />
    <div
      class="autocomplete__wrapper"
    >
      <input
        class="autocomplete__input autocomplete__input--default"
        data-hj-allow=""
        id="autocomplete"
        maxlength="512"
        name="q"
        type="search"
        value="diabetes"
      />
    </div>
  </div>
</div>
`;
